Fixed form submit clear and removed extra spacing empty blogItemArray

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -33,5 +33,4 @@
   align-items: center;
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
-  padding-top: 120px;
 }
