--- a/src/components/PostForm/postForm.module.scss
+++ b/src/components/PostForm/postForm.module.scss
@@ -8,6 +8,7 @@
     border-radius: 10px;
     min-width: 500px;
     align-items: center;
+    margin-top: 140px;
 
     &Input {
         border: none;
